# icassp-oov-recognition

./: CMakeLists.txt  README.md
data/de/data_test/: wav.scp
data/en/data_test/: wav.scp
libs/: fast.cc  fst-wrapper.cc  fst-wrapper.h
scripts/: build_cv_test_train.py  compose_hcl.sh  expand_fsts.py  recover_unk_words.sh
